# egene

./: .gitignore  GEMINI.md  README.md  bold_data.tsv  exercice_genetique_insuline.py  generate_pptx.py  pull_genome.py  pyproject.toml  response_error.html  test.R  test.aux  test.fdb_latexmk  test.fls  test.out  test.tex
barcoding-adn/: 01_fetch_data.py  02_data_exploration.py  03_phylogeny.py  04_barcode_gap.py  bumblebee_tree.nwk  consignes.txt
barcoding_2/: consignes_barcoding.md
barcoding_2/td_python/: 01_identification.py  02_exploration.py  03_barcode_gap.py
cours/: Génomique_william_marande .md  Introduction_pierre.md  proteomic.md
cours/barcoding/: cours_barcoding.md
cours/cour_1_intro/: n_genomix_and_rice_biotechnologiy.md  n_notes.md
cours/cour_J1_intro/: .~lock.presentation_genomique.pptx#  cours_2.md  n_cours_inra_j1.md  presentation_genomique.pptx  riz_genome_ncbi.py
cours/cour_j1_intro/: guide_pres_cnrgv.md  n_cours_inra_j1.md
cours/cours_de_py/: adn.py
cours/cours_j2/: .conform.5898480.prise_note_farid.md  n_prise_note_farid.md  prise_note_farid.md
cours/cours_j3/: cours_farid.md
practice/: import_method.py  insulin_dif.py  pairing.py
