[project]
name = "egene"
version = "0.1.0"
description = "This project is for egene"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bio>=1.8.1",
    "biopython>=1.86",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "python-pptx>=1.0.2",
]
